--- a/projec/server/templates/about_us.html
+++ b/projec/server/templates/about_us.html
@@ -136,7 +136,7 @@
                     <div class="p-4 border rounded shadow-sm bg-light">
                         <h2 class="mb-4">Контакты</h2>
                         <p class="fs-5 mb-2">Есть вопросы или предложения?</p>
-                        <p class="mb-1"><strong>Email:</strong> <a href="mailto:support@jobmatch.com" class="text-decoration-none">support@jobmatch.com</a></p>
+                        <p class="mb-1"><strong>Email:</strong> <a href="mailto:litvinov06062006@gmail.com" class="text-decoration-none">litvinov06062006@gmail.com</a></p>
                         <p><strong>Телефон:</strong> +7 (989) 529-04-53</p>
                     </div>
                 </div>
